tests/paczka1/fuzzy1/81985836.err
Error in line 4: QLY A122 37,0
Error in line 6: QLY A142 67,0
Error in line 15: E2ve S237 77,5
Error in line 14: bQZLSPH S237 2,9
Error in line 7: 7Q2 A142 14,2
Error in line 25: bQZLSPH A122 31,2
Error in line 21: E2ve S972 179,1
Error in line 40: QLY SB72 54,7
